...
          sellerId: 'mock_seller',
          quantity: 15,
          genre: 'Science Fiction',
        ),
        Book(
          id: '3',
          title: 'Flutter Apprentice',
          author: 'Mike Katz',
          price: 45.00,
          imageUrls: ['https://placehold.co/200x300/png?text=Flutter'],
          description: 'Build for iOS and Android with Flutter!',
          sellerId: 'mock_seller',
          quantity: 5,
...
